build: add Spotless formatting with palantirJavaFormat
Why:
- P9.1: Einheitlicher Code-Stil und weniger zufällige Diffs
- Kein Formatting-Tool war bisher konfiguriert
- Import-Ordnung war inkonsistent über 296 Dateien

What:
- Add Spotless Gradle plugin 8.7.0
- Configure palantirJavaFormat (4-space indent, matching project)
- Configure removeUnusedImports, importOrder, trimTrailingWhitespace, endWithNewline
- Add .editorconfig (4-space, UTF-8, LF)
- Add spotlessCheck to check lifecycle (CI-integriert)
- Apply formatting to all Java sources (296 files)
- Format misc files (*.gradle, *.md, .gitignore)

Verification:
- ./gradlew spotlessCheck: passed
- ./gradlew compileJava compileTestJava compileIntegrationTestJava: passed
- ./gradlew test: passed
- ./gradlew integrationTest: passed